# smolrl-tutorials

./: .gitignore  LICENSE  README.md  environment.yml  index.html  pyproject.toml  requirements.txt  resources.md  run_flappy_bird.py  run_forzen.py  run_forzen_lake.py  run_frozen_lake.py  run_game.py
courses/: 01.q-learning.ipynb  01.rl.ipynb  01.rl.md  02.q-learning.ipynb  02.q-learning.md  03.dqn.md
courses/2025/hw01_answer_submitted_by_congfu/submissions/congfu/: congfu.md
courses/2025/hw1/: README.md
courses/2025/hw1/submissions/: hw-miao.ipynb  hw01.md
courses/2025/hw1/submissions/Homework-miao-4.17/: hw-miao.ipynb
courses/2025/hw1/submissions/Lynn-hw1/: yqlin.md
courses/2025/hw1/submissions/eri/: hw01.md
courses/2025/hw1/submissions/homework-1/: yqlin.md
courses/2025/hw1/submissions/lqhuang/: README.md
docs/: installation.md
eri_small_example/: 1D_Qlearning.ipynb
modules/FlapPyBird/: main.py  pyproject.toml
modules/FlapPyBird/src/FlapPyBird/: flappy.py
modules/FlapPyBird/src/FlapPyBird/utils/: constants.py  images.py  sounds.py
modules/q-bird/: index.html
src/smolrl/: model.py  vis.py
src/smolrl/agents/: q_learning.py
src/smolrl/envs/: __init__.py  _utils.py  frozen_lake.py
src/smolrl/envs/flappy_bird/: __init__.py  common.py  env_simple.py
tutorials/: 01.rl.md  02.example-1d-q-learning.ipynb  02.q-learning.md  1D_Qlearning.ipynb
wiki/: resources.md
