[project]
name = "deep-learning-flappybird"
authors = [{ name = "Lanqing Huang", email = "lqhuang@outlook.com" }]
version = "0.1.0"
description = "Play Flappy Bird by deep learning"
requires-python = ">=3.10,<3.13"
dependencies = [
    "pygame>=2.6.1",
    "flappybird>=1.0.0",
    "opencv-python>=4.10.0.84",
    "numpy>=2.0.2,<3",
    "jax>=0.4.30",
    "flax>=0.8.5",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "ruff>=0.8.0",
    "jupyterlab>=4.3.1",
    "pip>=24.3.1",
    "build>=1.2.2.post1",
]
metal = ["jax-metal>=0.1.0"]

[tool.uv.workspace]
members = ["modules/*"]

[tool.uv.sources]
flappybird = { workspace = true }

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 79
preview = true
skip-magic-trailing-comma = true

[tool.ruff.lint]
unfixable = ["F401"]

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md#main-pyright-config-options
typeCheckingMode = "standard"
reportRedeclaration = "none"
