[project]
name = "smolrl"
description = "Play Flappy Bird by deep learning with mini RL framework."
authors = [{ name = "Lanqing Huang", email = "lqhuang@outlook.com" }]
version = "0.1.0"
requires-python = ">=3.10,<3.13"
dependencies = [
    # in-tree dependencies under `packages/`
    "flappybird>=1.0.0",
    # external dependencies
    "pygame>=2.6.1",
    "opencv-python>=4.10.0.84",
    "numpy>=2.0.2,<3",
    # "jax>=0.4.30",
    # "flax>=0.8.5",
    "gymnasium[toy-text]>=1.0.0",
    "tqdm>=4.67.1",
    "rich>=13.9.4",
    "matplotlib>=3.10.0",
    "ipywidgets>=8.1.5",
    "ipympl>=0.9.6",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "typer>=0.15.1",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "ruff>=0.8.0",
    "jupyterlab>=4.3.1",
    "pip>=24.3.1",
    "build>=1.2.2.post1",
]
metal = ["jax-metal>=0.1.0"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
flappybird = { workspace = true }

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 79
preview = true
skip-magic-trailing-comma = true

[tool.ruff.lint]
unfixable = ["F401"]

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md#main-pyright-config-options
typeCheckingMode = "standard"
reportRedeclaration = "none"
